Finished code for submission

--- a/kaggle-comp/competition1_arxiv/notebooks/Bernoulli NB.ipynb
+++ b/kaggle-comp/competition1_arxiv/notebooks/Bernoulli NB.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO\n",
-    "# file will be for B nb tests and such\n",
-    "# -make sure it runs and predicts completely without any np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -51,35 +40,14 @@
     }
    ],
    "source": [
-    "from src.preprocess import pre_process"
+    "from src.preprocess import pre_process\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import cross_val_score, train_test_split"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cleaning...\n",
-      "splitting data...\n",
-      "vectorizing...\n",
-      "done!\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train, X_val, y_train, y_val, vectorizer = pre_process('dataset/train.csv',\n",
-    "                                                         data = 'train',\n",
-    "                                                         vectorizer = 'binary',\n",
-    "                                                         max_features = 3000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,17 +86,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cleaning...\n",
+      "vectorizing...\n",
+      "done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y, vectorizer = pre_process('dataset/train.csv',\n",
+    "                                 data = 'train',\n",
+    "                                 vectorizer = 'binary',\n",
+    "                                 max_features = 6000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bnb = BernoulliNB()\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bnb = BernoulliNB(0.2)\n",
     "bnb.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,25 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.778"
+       "0.7866666666666666"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
