--- a/kaggle-comp/competition1_arxiv/notebooks/LinearSVC.ipynb
+++ b/kaggle-comp/competition1_arxiv/notebooks/LinearSVC.ipynb
@@ -6,16 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "# -add a bit more to fluff up file and add metric scoring"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "os.chdir('../')"
    ]
@@ -41,10 +31,8 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.svm import LinearSVC\n",
     "\n",
     "from src.preprocess import pre_process"
@@ -52,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -60,44 +48,40 @@
      "output_type": "stream",
      "text": [
       "cleaning...\n",
-      "splitting data...\n",
       "vectorizing...\n",
       "done!\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_val, y_train, y_val, vectorizer = pre_process('dataset/train.csv',\n",
-    "                                                         data = 'train',\n",
-    "                                                         vectorizer = 'tfidf',\n",
-    "                                                         max_features = 4000)\n"
+    "X, y, vectorizer = pre_process('dataset/train.csv',\n",
+    "                                 data = 'train',\n",
+    "                                 vectorizer = 'tfidf',\n",
+    "                                 max_features = 4000)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.concatenate((X_train,X_val), axis=0)\n",
-    "y = np.concatenate((y_train,y_val), axis=0)\n",
-    "\n",
     "svm = LinearSVC()\n",
     "cross_scores = cross_val_score(svm, X, y, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7758666666666667"
+       "0.7705333333333333"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
