--- a/kaggle-comp/competition1_arxiv/notebooks/Multinomial NB.ipynb
+++ b/kaggle-comp/competition1_arxiv/notebooks/Multinomial NB.ipynb
@@ -6,16 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "# this file will be used to have a basic testing file for multinomial nb testing and such"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "os.chdir('../')"
    ]
@@ -44,7 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score, train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "\n",
     "from src.preprocess import pre_process"
@@ -52,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -60,49 +50,66 @@
      "output_type": "stream",
      "text": [
       "cleaning...\n",
-      "splitting data...\n",
       "vectorizing...\n",
       "done!\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_val, y_train, y_val, vectorizer = pre_process('dataset/train.csv',\n",
-    "                                                         data = 'train',\n",
-    "                                                         vectorizer = 'tfidf',\n",
-    "                                                         max_features = 4000)\n"
+    "X, y, vectorizer = pre_process('dataset/train.csv',\n",
+    "                                 data = 'train',\n",
+    "                                 vectorizer = 'tfidf',\n",
+    "                                 max_features = None)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "clf = MultinomialNB(0.1)\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_pred = clf.predict(X_val).astype(int)\n",
-    "y_val = y_val.astype(int)"
+    "cross_scores = cross_val_score(clf, X, y, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7853333333333333"
+       "0.7928"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_pred, y_val)"
+    "cross_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_val).astype(int)\n",
+    "y_val = y_val.astype(int)"
    ]
   },
   {
