--- a/kaggle-comp/competition1_arxiv/notebooks/SVM.ipynb
+++ b/kaggle-comp/competition1_arxiv/notebooks/SVM.ipynb
@@ -6,15 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# same notes as linear SVC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "os.chdir('../')"
    ]
@@ -42,6 +33,7 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.svm import SVC\n",
     "\n",
     "from src.preprocess import pre_process"
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -57,104 +49,46 @@
      "output_type": "stream",
      "text": [
       "cleaning...\n",
-      "splitting data...\n",
       "vectorizing...\n",
       "done!\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_val, y_train, y_val, vectorizer = pre_process('dataset/train.csv',\n",
-    "                                                         data = 'train',\n",
-    "                                                         vectorizer = 'tfidf',\n",
-    "                                                         max_features = 2000)\n"
+    "X, y, vectorizer = pre_process('dataset/train.csv',\n",
+    "                                 data = 'train',\n",
+    "                                 vectorizer = 'tfidf',\n",
+    "                                 max_features = 4000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "svm = SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
-    "svm.fit(X_train, y_train)\n",
-    "y_pred = svm.predict(X_val).astype(int)\n",
-    "y_val = y_val.astype(int)"
+    "cross_scores = cross_val_score(svm, X, y, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7706666666666667"
+       "0.7757333333333334"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(y_pred, y_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores = []\n",
-    "for features in range (500, 5001, 500):\n",
-    "    X_train, X_val, y_train, y_val, vectorizer = pre_process('dataset/train.csv',\n",
-    "                                                         data = 'train',\n",
-    "                                                         vectorizer = 'tfidf',\n",
-    "                                                         max_features = features)\n",
-    "    for alpha in range(1, 11, 1):\n",
-    "        bnb = MultinomialNB(alpha)\n",
-    "        bnb.fit(X_train, y_train)\n",
-    "        y_pred = bnb.predict(X_val).astype(int)\n",
-    "        y_val = y_val.astype(int)\n",
-    "        scores.append((features, alpha, accuracy_score(y_pred, y_val)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max(scores, key=lambda item: item[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_val, y_train, y_val, vectorizer = pre_process('dataset/train.csv',\n",
-    "                                                         data = 'train',\n",
-    "                                                         vectorizer = 'tfidf',\n",
-    "                                                         max_features = 4000)\n",
-    "bnb = MultinomialNB(0.1)\n",
-    "bnb.fit(X_train, y_train)\n",
-    "y_pred = bnb.predict(X_val).astype(int)\n",
-    "y_val = y_val.astype(int)\n",
-    "scores.append((features, alpha, accuracy_score(y_pred, y_val)))"
+    "cross_scores.mean()"
    ]
   }
  ],
