--- a/kaggle-comp/competition1_arxiv/notebooks/preprocess.ipynb
+++ b/kaggle-comp/competition1_arxiv/notebooks/preprocess.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO\n",
-    "# -update code here to with pipeline clean and preprocess stuff\n",
-    "# -make class to be put in a python file with the same code as here and call those methods in other notebooks"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -202,9 +191,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# list of word types (nouns and adjectives) to leave in the text\n",
-    "defTags = ['NN', 'NNS', 'NNP', 'NNPS', 'JJ', 'JJS', 'JJR']#, 'RB', 'RBS', 'RBR', 'VB', 'VBD', 'VBG', 'VBN', 'VBP', 'VBZ']\n",
-    "\n",
     "# functions to determine the type of a word\n",
     "def is_noun(tag):\n",
     "    return tag in ['NN', 'NNS', 'NNP', 'NNPS']\n",
@@ -244,21 +230,28 @@
     "        clean_tokens = []\n",
     "\n",
     "        token = comment_string\n",
-    "        token = re.sub(r'\\b(?:(?:https?|ftp):\\/\\/)?\\w[\\w-]*(?:\\.[\\w-]+)+\\S*', lambda x:' ' + re.findall('\\w[\\w-]*(?:\\.[\\w-]+)+', x.group())[0], token)\n",
-    "        token = re.sub('r/', ' ', token)\n",
-    "        token = re.sub('u/', ' ', token)\n",
     "        \n",
+    "        for thing, tag in nltk.pos_tag(token.split()):\n",
+    "            if (thing not in string.punctuation):\n",
+    "                clean_tokens.append(lemmatizer.lemmatize(thing, penn_to_wn(tag)))\n",
+    "        \n",
+    "        clean_tokens = [word for word in clean_tokens if word not in stopwords.words('english')]\n",
+    "            \n",
+    "        token = ' '.join(clean_tokens)\n",
+    "                \n",
+    "        matches = re.findall(r'\\\\\\w*', token)\n",
+    "        matches = [re.sub(r'\\\\', '', word) for word in list(set(matches))]\n",
+    "        token = re.sub(r'\\\\\\w*', ' ', token)\n",
+    "        token = token + ' '.join(matches)\n",
     "        \n",
     "        token = re.sub(r'\\[', ' ', token)\n",
     "        token = re.sub(r'\\]', ' ', token)\n",
-    "        \n",
-    "        token = re.sub(r'\\dv\\d', 'vs', token)\n",
-    "        token = re.sub(r'\\n', ' ', token)\n",
     "\n",
+    "        \n",
+    "        token = re.sub(r'\\n', ' ', token)\n",
     "\n",
     "        token = re.sub(r'\\?', ' ', token)\n",
     "        token = re.sub(r'\\\"', ' ', token)\n",
-    "\n",
     "        token = re.sub(r'\\!', ' ', token)\n",
     "        token = re.sub(r'\\,', ' ', token)\n",
     "        token = re.sub(r'\\.', ' ', token)\n",
@@ -266,7 +259,7 @@
     "        token = re.sub(r'\\;', ' ', token)\n",
     "        token = re.sub(r'\\)', ' ', token)\n",
     "        token = re.sub(r'\\(', ' ', token)\n",
-    "        token = re.sub(r'\\\"', ' ', token)\n",
+    "\n",
     "        token = re.sub(r\"\\'\", ' ', token)\n",
     "        token = re.sub(r'\\+', ' ', token)\n",
     "        token = re.sub(r\"\\-\", ' ', token)\n",
@@ -280,53 +273,34 @@
     "        token = re.sub(r\"\\#\", ' # ', token)\n",
     "        token = re.sub(' +', ' ', token)\n",
     "\n",
-    "        for thing, tag in nltk.pos_tag(token.split()):\n",
-    "            if (thing not in string.punctuation):\n",
-    "                clean_tokens.append(lemmatizer.lemmatize(thing, penn_to_wn(tag)))\n",
-    "\n",
-    "        token = ' '.join(clean_tokens)\n",
-    "    \n",
-    "        token = re.sub(r' \\d+\\$', ' [money]', token)\n",
-    "        token = re.sub(r' \\$\\d+', ' [money]', token)\n",
-    "        token = re.sub(r' \\d+M', ' [money]', token)\n",
-    "        token = re.sub(r' M\\d+', ' [money]', token)\n",
-    "\n",
-    "        token = re.sub(r' \\d+m', ' [distance]', token)\n",
-    "        token = re.sub(r' \\d+km', ' [distance]', token)\n",
-    "        token = re.sub(r' \\d+KM', ' [distance]', token)\n",
-    "        token = re.sub(r' \\d+cm', ' [distance]', token)\n",
-    "        \n",
-    "        token = re.sub(r' \\d+pm', ' [time]', token)\n",
-    "        token = re.sub(r' \\d+PM', ' [time]', token)\n",
-    "        token = re.sub(r' \\d+am', ' [time]', token)\n",
-    "        token = re.sub(r' \\d+AM', ' [time]', token)\n",
-    "  \n",
-    "  \n",
     "        token = re.sub(r' 200\\d ', ' [year]', token)\n",
     "        token = re.sub(r' 20\\d\\d ', ' [year]', token)\n",
     "        token = re.sub(r' 199\\d ', ' [year]', token)\n",
     "\n",
-    "      \n",
     "        token = re.sub(r' \\d+', ' [number] ', token)\n",
     "\n",
     "        token = token.lower()\n",
+    "        \n",
+    "#         token = re.sub(r'\\$( )*\\$', ' ', token)\n",
+    "# \n",
+    "#         token = re.sub(r'\\$.*\\$', ' ', token)\n",
+    "# \n",
     "\n",
     "        token = re.sub(r'\\_', ' ', token)\n",
-    "    \n",
-    "    \n",
+    "\n",
     "        return ' '.join(token.split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a recent paper demonstrate a considerable degree of self similarity between rr lyrae star and their atomic scale analogue excite helium atom undergo single level transition between n [number] and n [number] discrete self similarity between these fractal analogue be indentified in term of their mass radii oscillation period basic morphology and kinematics in this second paper on the subject an extremely large and carefully analyzed sample of rr lyrae oscillation period provide further evidence for a unique match between the predicted set of discrete period base exclusively on the known helium spectrum and the discrete scaling equation of a fractal cosmological paradigm and the observed period spectrum of rr lyrae star astro-ph\n"
+      "a recent paper demonstrate considerable degree self similarity rr lyrae star atomic scale analogues excite helium atom undergo single level transition n [number] n [number] discrete self similarity fractal analogue indentified term masses radii oscillation periods basic morphology kinematics in second paper subject extremely large carefully analyzed sample rr lyrae oscillation period provide evidence unique match predicted set discrete periods base exclusively known helium spectrum discrete scaling equation fractal cosmological paradigm observed period spectrum rr lyrae stars astro-ph\n"
      ]
     }
    ],
@@ -338,11 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pre_process(file_path, data = 'train', vectorizer = 'tfidf', max_features = 20000):    \n",
+    "def pre_process(file_path, data = 'train', vectorizer = 'tfidf', max_features = None, existing_vectorizer=None):    \n",
     "    ARXIV = ['astro-ph', 'astro-ph.CO', 'astro-ph.GA', 'astro-ph.SR',\n",
     "       'cond-mat.mes-hall', 'cond-mat.mtrl-sci', 'cs.LG', 'gr-qc',\n",
     "       'hep-ph', 'hep-th', 'math.AP', 'math.CO', 'physics.optics',\n",
@@ -350,12 +324,15 @@
     "    \n",
     "    lemmatizer = WordNetLemmatizer()\n",
     "    \n",
-    "    if vectorizer == 'tfidf':\n",
-    "        vectorizer = TfidfVectorizer(max_features = max_features)\n",
-    "    elif vectorizer == 'count':\n",
-    "        vectorizer = CountVectorizer(max_features = max_features)\n",
-    "    elif vectorizer == 'binary':\n",
-    "        vectorizer = CountVectorizer(max_features = max_features, binary = True)\n",
+    "    if existing_vectorizer:\n",
+    "        vectorizer = existing_vectorizer\n",
+    "    else:\n",
+    "        if vectorizer == 'tfidf':\n",
+    "            vectorizer = TfidfVectorizer(max_features = max_features)\n",
+    "        elif vectorizer == 'count':\n",
+    "            vectorizer = CountVectorizer(max_features = max_features)\n",
+    "        elif vectorizer == 'binary':\n",
+    "            vectorizer = CountVectorizer(max_features = max_features, binary = True)\n",
     "\n",
     "\n",
     "    with open(file_path) as csv_file:\n",
@@ -372,15 +349,12 @@
     "            X, y = np.array(raw_data)[:, 1], None\n",
     "\n",
     "    if data == 'train':\n",
-    "        print('splitting data...')\n",
-    "        X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=11)\n",
     "\n",
     "        print('vectorizing...')\n",
-    "        X_train = vectorizer.fit_transform(X_train).toarray()\n",
-    "        X_val = vectorizer.transform(X_val).toarray()\n",
+    "        X = vectorizer.fit_transform(X).toarray()\n",
     "        \n",
     "        print('done!')\n",
-    "        return X_train, X_val, y_train, y_val, vectorizer\n",
+    "        return X, y, vectorizer\n",
     "      \n",
     "    elif data == 'test':\n",
     "        print('vectorizing...')\n",
@@ -392,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -400,34 +374,33 @@
      "output_type": "stream",
      "text": [
       "cleaning...\n",
-      "splitting data...\n",
       "vectorizing...\n",
       "done!\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_val, y_train, y_val, vectorizer = pre_process('../dataset/train.csv', data = 'train', vectorizer = 'tfidf', max_features=10)"
+    "X, y, vectorizer = pre_process('../dataset/train.csv', data = 'train', vectorizer = 'tfidf', max_features=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['13', '13', '3', ..., '0', '14', '3'], dtype='<U2218')"
+       "array(['0', '8', '6', ..., '9', '11', '9'], dtype='<U1807')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_train"
+    "y"
    ]
   }
  ],
